Fixed body overflow for Chrome

--- a/src/css/all.sass
+++ b/src/css/all.sass
@@ -70,6 +70,7 @@ $transition: 0.5s linear
 body
     font-size: 1.1em
     font-weight: 600
+    overflow-x: hidden
 
 .section
     padding: 1.5rem 1rem
